# rocket_configurator

./: README.md  pyproject.toml  tester.py
src/rocket_config/: rocket.py  stage.py
stryder_calculations/: foo.yaml  rocket_stage_calc.py  stage.yaml  stryder.yaml  yaml_tutorial.py
