[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocket_config"
version = "0.0.3"
authors = [
  { name="Eric Dai", email="ericdai1130@gmail.com" },
]
description = "A rocket configurator that solves for rocket dimensions based on given design parameters"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"